--- a/bin/sub/S.html
+++ b/bin/sub/S.html
@@ -46,6 +46,16 @@
         </ul>
     </p>
 </div>
+<div >
+    <p class="a">HDO BOX:-</p>
+    <a href="https://hdo.app/download"><img src="../temp/dance-emoji.gif" style="border-radius: 5%;"></a>
+    <p style="float: left; color: aliceblue;">About:Get many popular movies available in many streaming movie sites.
+        <ul style="float: left; color: aliceblue;">Features:
+            <li>Available for Android.</li>
+            <li>Free to use</li>
+        </ul>
+    </p>
+</div>
 
 
 <style>
